# blam-tags

./: Cargo.toml  README.md
blam-tags/: Cargo.toml  README.md
blam-tags/examples/: anim_corpus_compare.rs  array_audit.rs  ass_corpus_sweep.rs  bitmap_extract_sweep.rs  bitmap_format_histogram.rs  bitmap_format_survey.rs  bitmap_import_info_sweep.rs  bitmap_source_data_sweep.rs  blay_variance.rs  ce_antr_compressed_sweep.rs  ce_antr_decode.rs  ce_antr_decode_sweep.rs  ce_antr_export_sweep.rs  ce_antr_probe.rs  ce_bsp_probe.rs  ce_bsp_sweep.rs  ce_jms_probe.rs  ce_jms_sweep.rs  check_h2_defs.rs  classic_bitmap_sweep.rs  classic_coll_sweep.rs  classic_corpus_sweep.rs  classic_diag.rs  classic_fail_samples.rs  classic_file_roundtrip.rs  classic_roundtrip.rs  classic_size_mismatch.rs  dedupe_definitions.rs  dump_animation_graph.rs  dump_attach.rs  dump_beam_system.rs  dump_camera_fx.rs  dump_contrail_system.rs  dump_damage_effect.rs  dump_damage_effect_fields.rs  dump_data_field_sizes.rs  dump_decal_bitmaps.rs  dump_decals.rs  dump_effect.rs  dump_effect_field_names.rs  (+81 more)
blam-tags/scripts/: habt_to_json.py  validate_classic_defs.py
blam-tags/src/: animation.rs  api.rs  area_screen_effect.rs  ass.rs  beam_system.rs  biped.rs  bitmap.rs  camera_fx_settings.rs  classic.rs  contrail_system.rs  crate_definition.rs  creature.rs  damage_effect.rs  data.rs  decal_system.rs  decorator_set.rs  definition.rs  device.rs  device_control.rs  device_machine.rs  device_terminal.rs  effect.rs  effect_globals.rs  effect_scenery.rs  effects_properties.rs  equipment.rs  error.rs  fields.rs  (+34 more)
(+270 files in other folders)
