[package]
name = "blam-tags"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tiff = "0.9"
bcdec_rs = "0.2"
half = "2"
num-traits = "0.2"
num-derive = "0.4"
strum = { version = "0.27", features = ["derive"] }
flate2 = "1"

[dev-dependencies]
md5 = "0.7"
